# cloak

./: .gitignore  LICENSE  MANUAL.md  NOTICE  README.md  cloak-architecture.md  go.mod  go.sum
apps/cloak-gui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
apps/cloak-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/cloak-gui/src-tauri/capabilities/: default.json
apps/cloak-gui/src-tauri/icons/: README.md
apps/cloak-gui/src-tauri/src/: commands.rs  daemon.rs  error.rs  exec.rs  lib.rs  main.rs  paths.rs  state.rs  tray.rs
apps/cloak-gui/src-tauri/src/client/: error.rs  methods.rs  mod.rs  transport.rs  types.rs
cmd/cloak/: clientutil.go  connect.go  creds.go  daemon.go  daemon_unix.go  daemon_windows.go  endpoint.go  exec.go  log.go  main.go  prompt.go  prompt_test.go  secret.go  token.go  vault.go
cmd/cloakd/: main.go
internal/adapters/: adapter.go  proxy.go
internal/audit/: audit.go  audit_test.go
internal/config/: config.go
internal/endpoints/: manager.go  manager_test.go  types.go
internal/errs/: errs.go
internal/ipc/: ipc_test.go  methods.go  peer_darwin.go  peer_other.go  peer_unix.go  protocol.go  server.go  session.go
internal/paths/: paths.go
internal/secrets/: mlock_other.go  mlock_unix.go  secrets.go  secrets_test.go
internal/store/: schema.go  store.go  store_test.go  tokens.go  types.go  util.go
internal/vault/: crypto.go  meta.go  vault.go  vault_test.go
pkg/client/: client.go  methods.go  types.go
scripts/: build-macos.sh
tools/contract-tests/: README.md
(+75 files in other folders)
